fix overflow bug

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,10 @@ body {
     overflow-x: hidden !important;
 }
 
+* {
+    overflow-x: hidden !important;
+}
+
 
 .bg-image {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='51' height='51' viewBox='0 0 51 51' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12.625 0L12.625 12.625H0V13.625H12.625L12.625 37.125H0V38.125H12.625V50.75H13.625V38.125H37.125L37.125 50.75H38.125L38.125 38.125H50.75V37.125H38.125V13.625H50.75V12.625H38.125V0H37.125V12.625H13.625L13.625 0H12.625ZM37.125 37.125V13.625H13.625L13.625 37.125H37.125Z' fill='%23505F7A10'/%3E%3C/svg%3E") !important;
